--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ name = "mates"
 version = "0.0.1"
 authors = ["Markus Unterwaditzer <markus@unterwaditzer.net>"]
 
+[dependencies.peg]
+git = "https://github.com/kevinmehall/rust-peg.git"
+
 [lib]
 name = "mates"
 path = "src/mates/lib.rs"
