switch to crates.io for atomicwrites

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,9 +15,7 @@ doc = false
 [dependencies]
 email = "*"
 uuid = "*"
+atomicwrites = "*"
 
 [dependencies.vobject]
 git = "https://github.com/untitaker/rust-vobject.git"
-
-[dependencies.atomicwrites]
-git = "https://github.com/untitaker/rust-atomicwrites.git"
