--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ doc = false
 email = "*"
 uuid = "*"
 atomicwrites = "*"
+getopts = "*"
 
 [dependencies.vobject]
 git = "https://github.com/untitaker/rust-vobject.git"
