--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,10 +13,13 @@ test = false
 doc = false
 
 [dependencies]
-email = "*"
 uuid = "*"
 atomicwrites = "*"
 getopts = "*"
 
 [dependencies.vobject]
 git = "https://github.com/untitaker/rust-vobject.git"
+
+[dependencies.email]
+git = "https://github.com/untitaker/rust-email.git"
+branch = "results"
