Use Clap for argument parsing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,7 @@ email = "*"
 
 [dependencies.vobject]
 git = "https://github.com/untitaker/rust-vobject.git"
+
+[dependencies.clap]
+git = "https://github.com/untitaker/clap-rs.git"
+branch = "args"
