Use crates.io vobject

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,4 @@ uuid = "*"
 atomicwrites = "*"
 email = "*"
 clap = "*"
-
-[dependencies.vobject]
-git = "https://github.com/untitaker/rust-vobject.git"
+vobject = "*"
