--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "mates"
 version = "0.1.1"
 authors = ["Markus Unterwaditzer <markus@unterwaditzer.net>"]
+license = "MIT"
 
 [lib]
 name = "mates"
@@ -13,8 +14,8 @@ test = false
 doc = false
 
 [dependencies]
-uuid = "*"
-atomicwrites = "*"
-email = "*"
-clap = "*"
-vobject = "*"
+uuid = "0.1"
+atomicwrites = "0.0"
+email = "0.0"
+clap = "1"
+vobject = "0.1"
