--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ test = false
 doc = false
 
 [dependencies]
-uuid = "0.1"
+uuid = { version = "0.3", features = ["v4"] }
 atomicwrites = "0.0"
 email = "0.0"
 clap = "2"
